너무 어렵다 진짜

--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@ body {
   color: #333;
   /* 위 속성들은 모두 상속되기에 전체 스타일을 한번에 제어 */
 
-  height: 3000px;
+
 }
 
 a {
@@ -27,6 +27,61 @@ img {
   margin: 0 auto;
   position: relative;
 }
+  /* 전역 버튼 스타일 */
+  /* 버튼과 같이 여러곳에서 반복사용되는 요소를 공통 스타일로 작업하면, 매번 다시 작성할 필요가 없음 */
+  .btn {
+    width: 130px;
+    padding: 10px;
+    border: 2px soild #333;
+    border-radius: 4px;
+    box-sizing: border-box;
+    font-weight: 700;
+    color: #333;
+    text-align: center;
+    cursor: pointer;
+    display: block; /* a, span 태그 같은 인라인 요소를 버튼으로 사용할 수도 있으니 미리 블록으로 지정 */
+    transition: .4s
+
+  /* (참고) 커서 모양 커스텀 가능 */
+  /* cursor: url("https://blog.kakaocdn.net/dn/BQXpN/btq3qNR67Lg/8tx8tGzkOcr5BuX5dyIaKk/img.png") 58 58, auto; */
+}
+.btn:hover {
+  background-color: #333;
+  color: #fff;
+}
+.btn.btn--brown {
+  color: #592b18;
+  border-color: #592b18;
+}
+.btn.btn--brown:hover {
+  color: #fff;
+  background-color: #592b18;
+}
+.btn.btn--reverse {
+  background-color: #333;
+  color: #fff;
+}
+.btn.btn--reverse:hover {
+  background-color: transparent;
+  color: #333;
+}
+.btn.btn--gold {
+  color: #d9aa8a;
+  border-color: #d9aa8a;  
+}
+.btn.btn--gold:hover {
+  color: #fff;
+  background-color: #d9aa8a;
+}
+.btn.btn--white {
+  color: #fff;
+  border-color: #fff;
+}
+.btn.btn--white:hover {
+  color: #333;
+  background-color: #fff;
+}
+
 
 /* HEADER */
 header {
@@ -103,7 +158,7 @@ header .sub-menu .search input {
   padding: 4px 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
-  box-sizing: border-box; /* 박스 사이즈의 기준을 보더까지 잡음 */
+     /* 박스 사이즈의 기준을 보더까지 잡음 */
   outline: none; /* 보더 바깥쪽 테두리인데 잘 안씀(보더를 씀) */
   background-color: #fff;
   color: #777;
@@ -165,7 +220,7 @@ header .main-menu .item .item__contents .contents__menu {
 header .main-menu .item .item__contents .contents__menu > ul {
   display: flex;
   padding: 20px 0;
-}
+} 
 header .main-menu .item .item__contents .contents__menu > ul > li {
   /* 하위 메뉴 가로 너비를 통일 */
   width: 220px;
@@ -216,4 +271,145 @@ header .badges .badge {
 }
 
 
+/* VISUAL */
+.visual {
+  /* 헤더가 fixed 되어 일반 배치 흐름에서 벗어남(주변 요소들과 상호작용하지 않음) */
+  /* 헤더의 높이만큼 외부 여백 추가 */
+  margin-top: 120px;
+  background-image: url("../images/visual_bg.jpg");
+  background-position: center;
+}
+.visual .inner {
+  height: 646px;
+  /* background-color: orange; */
+}
+.visual .title {
+  position: absolute;
+  top: 88px;
+  left: -10px;
+}
+.visual .title .btn {
+  position: absolute;
+  top: 259px;
+  left: 173px;
+}
+.visual .cup1.image {
+  position: absolute;
+  bottom: 0;
+  right: -47px;
+}
+.visual .cup1.text {
+  position: absolute;
+  top: 38px;
+  right: 171px;
+}
+.visual .cup2.image {
+  position: absolute;
+  bottom: 0;
+  right: 162px;
+}
+.visual .cup2.text {
+  position: absolute;
+  top: 321px;
+  right: 416px;
+}
+.visual .spoon {
+  position: absolute;
+  bottom: 0;
+  left: 275px;
+}
 
+.visual .fade-in {
+  /* 순차적으로 요소 보이기 - 투명한 상태에서 시작되도록 */
+  opacity: 0;
+}
+
+/* NOTICE */
+.notice {
+  position: relative;
+}
+.notice .bg-left {
+  width: 50%;
+  height: 100%;
+  background-color: #333;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.notice .bg-right {
+  width: 50%;
+  height: 100%;
+  background-color: #f6f5ef;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+.notice .inner {
+  height: 62px;
+  /* border: 4px solid red;  */
+  display: flex;
+}
+.notice .inner__left {
+  /* 방법1. %를 사용하여 비율 나누기 */
+  width: 70%;
+  background-color: #333;
+  /* flex: 7; */
+  display: flex;
+  align-items: center;
+}
+.notice .inner__left h2 {
+  color: #fff;
+  font-size: 17px;
+  font-weight: 700;
+  margin-right: 20px;
+}
+.notice .inner__left .swiper{
+  /* background-color: orange; */
+  height: 62px;
+  flex-grow: 1; /* 여기서는 flex:1; 써도 같은 결과*/
+}
+.notice .inner__left .swiper .swiper-slide {
+  display: flex;
+  align-items: center;
+  height: 62px;
+}
+.notice .inner__left .swiper .swiper-slide a {
+  color: #fff;
+}
+.notice .inner__left .notice-more {
+  width: 62PX;
+  height: 62px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.notice .inner__left .notice-more  .material-icons {
+  /* 머티리얼 아이콘은 글자 관련 속성이 적요오딤 */
+  color: #fff;
+
+}
+
+.notice .inner__right {
+  /* 방법1. %를 사용하여 비율 나누기 */
+  width: 30%;
+  /* 방법2. flex를 사용하여 비율 나누기 */
+  /* flex: 3; */
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+.notice .inner__right h2 {
+  font-size: 17px;
+  font-weight: 700;
+}
+.notice .inner__right .toggle-promotion {
+  width: 62PX;
+  height: 62px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+.notice .inner__right .toggle-promotion .material-icons {
+  font-size: 30px;
+}
