--- a/css/main4.css
+++ b/css/main4.css
@@ -106,24 +106,27 @@ width: 20px;
 margin-left: 10px;
 }
 .appbanner .appbanner-1 {
-width: 1348px;
-height: 260px;
+background-color: #ddcfbd;
 }
-.appbanner {
-width: 998.39px;
-max-height: 260px;
+.appbanner img {
+width: auto;
+height: 260px;
 display: block;
 text-align: center;
 background-color: #ddcfbd;
+margin: 0 auto;
 }
 .chuchen {
-width: 1348px;
-height: 854px;
+width: 100%;
+height: 854.64px;
 background-image: url(https://www.yupdduk.com/images/main/bg_menu2.jpg);
 background-size: cover;
+padding-top: 6rem;
+padding-bottom: 6rem;
+
 }
 .chuchen-img {
-width: 100%px;
+width: 100%;
 height: 854.64;
 }
 .yuppduk {
@@ -131,7 +134,7 @@ display: flex;
 margin: 0px 0px 16px;
 font-size: 38.4px;
 justify-content: center;
-color: #000;
+color: #FFF;
 }
 .yup-chuchen {
 display: flex;
@@ -139,4 +142,240 @@ margin: 10px 0px 48px;
 padding: 0px 0px 24px;
 font-size: 19.2px;
 justify-content: center;
+color: rgba(255,255, 255, .8);
+}
+.chuchen-menu {
+display: flex;
+margin: 0px -15px;
+flex-wrap: wrap;
+justify-content: center;
+}
+.yonjo {
+background-position: center bottom !important;
+background-color: #fff !important;
+margin: 0 1%;
+padding: 0;
+background-size: 335px !important;
+background-repeat: no-repeat !important;
+height: 430px;
+width: 322px;
+box-shadow: 0 5px 15px 0 #111;
+justify-content: center;
+text-align: center;
+background-image: url(https://www.yupdduk.com/Images/main/menu01_2021.png);
+}
+.yonjo:hover {
+    background-color: #de1d24 !important;
+    transition: all 1s;
+    padding: 8px;
+}
+.yonjo:hover .yonjo-yup , .yonjo:hover .yonjo-spi {
+  color: #fff !important;
+  font-family: 'Noto Sans KR', sans-serif;
+    text-transform: uppercase
+}
+.yonjo:hover .yonjo-sub a {
+  background-color: #d8b166;
+  font-size: 1rem;
+  padding: 2px 10px;
+  transition: 0.3s;
+  font-family: 'Noto Sans KR', sans-serif;
+    text-transform: uppercase
+}
+}
+.yonjo .yonjo-sub {
+  max-width: 400px;
+  font-size: 0.92rem;
+}
+.yonjo .yonjo-sub .yonjo-yup {
+  font-size: 1.8rem;
+  font-weight: 400;
+  padding-top: 2rem;
+  color: #8c6239;
+  font-weight: 600;
+}
+  
+.yonjo .yonjo-sub .yonjo-spi{
+  margin: 5px 0 10px 0;
+  color: #666;
+}
+
+.yonjo .yonjo-sub a { 
+    background-color: #ccc;
+    color: #fff;
+    border-radius: 30px;
+    font-size: 0.84rem;
+    font-weight: 300;
+    padding: 1px 6px;
+}
+.SIDE {
+background-position: center bottom !important;
+background-color: #fff !important;
+margin: 0 1%;
+padding: 0;
+background-size: 335px !important;
+background-repeat: no-repeat !important;
+height: 430px;
+width: 310px;
+box-shadow: 0 5px 15px 0 #111;
+justify-content: center;
+text-align: center;
+background-image: url(https://www.yupdduk.com/images/main/menu02_2021.png);
+}
+.SIDE:hover {
+  background-color: #de1d24 !important;
+  transition: all 1s;
+  padding: 8px;
+}
+.SIDE:hover .SIDE-SIDE , .SIDE:hover .SIDE-HOT {
+color: #fff !important;
+font-family: 'Noto Sans KR', sans-serif;
+  text-transform: uppercase
+}
+.SIDE:hover .SIDE-SUB a {
+background-color: #d8b166;
+font-size: 1rem;
+padding: 2px 10px;
+transition: 0.3s;
+font-family: 'Noto Sans KR', sans-serif;
+  text-transform: uppercase
+}
+.SIDE .SIDE-SUB {
+  max-width: 400px;
+  font-size: 0.92rem;
+}
+.SIDE .SIDE-SUB .SIDE-SIDE {
+  font-size: 1.8rem;
+  font-weight: 400;
+  padding-top: 2rem;
+  color: #8c6239;
+  font-weight: 600;
+}
+  
+.SIDE .SIDE-SUB .SIDE-HOT{
+  margin: 5px 0 10px 0;
+  color: #666;
+}
+
+.SIDE .SIDE-SUB a { 
+    background-color: #ccc;
+    color: #fff;
+    border-radius: 30px;
+    font-size: 0.84rem;
+    font-weight: 300;
+    padding: 1px 6px;
+}
+.TOPPING {
+background-position: center bottom !important;
+background-color: #fff !important;
+margin: 0 1%;
+padding: 0;
+background-size: 335px !important;
+background-repeat: no-repeat !important;
+height: 430px;
+width: 310px;
+box-shadow: 0 5px 15px 0 #111;
+justify-content: center;
+text-align: center;
+background-image: url(https://www.yupdduk.com/images/main/menu03.png);
+}
+.TOPPING:hover {
+  background-color: #de1d24 !important;
+  transition: all 1s;
+  padding: 8px;
+}
+.TOPPING:hover .TOPPING-TOP , .TOPPING:hover .TOPPING-TOP-GOOD {
+color: #fff !important;
+font-family: 'Noto Sans KR', sans-serif;
+  text-transform: uppercase
+}
+.TOPPING:hover .TOPPING-SUB a {
+background-color: #d8b166;
+font-size: 1rem;
+padding: 2px 10px;
+transition: 0.3s;
+font-family: 'Noto Sans KR', sans-serif;
+  text-transform: uppercase
+}
+.TOPPING .TOPPING-SUB {
+  max-width: 400px;
+  font-size: 0.92rem;
+}
+.TOPPING .TOPPING-SUB .TOPPING-TOP {
+  font-size: 1.8rem;
+  font-weight: 400;
+  padding-top: 2rem;
+  color: #8c6239;
+  font-weight: 600;
+}
+  
+.TOPPING .TOPPING-SUB .TOPPING-TOP-GOOD{
+  margin: 5px 0 10px 0;
+  color: #666;
+}
+
+.TOPPING .TOPPING-SUB a { 
+    background-color: #ccc;
+    color: #fff;
+    border-radius: 30px;
+    font-size: 0.84rem;
+    font-weight: 300;
+    padding: 1px 6px;
+}
+.SET {
+background-position: center bottom !important;
+background-color: #fff !important;
+margin: 0 1%;
+padding: 0;
+background-size: 335px !important;
+background-repeat: no-repeat !important;
+height: 430px;
+width: 310px;
+box-shadow: 0 5px 15px 0 #111;
+justify-content: center;
+text-align: center;
+background-image: url(https://www.yupdduk.com/images/main/menu04.png);
+}
+.SET:hover {
+  background-color: #de1d24 !important;
+  transition: all 1s;
+  padding: 8px;
+}
+.SET:hover .SET-SET , .SET:hover .SET-MORESET {
+color: #fff !important;
+font-family: 'Noto Sans KR', sans-serif;
+  text-transform: uppercase
+}
+.SET:hover .SET-SUB a {
+background-color: #d8b166;
+font-size: 1rem;
+padding: 2px 10px;
+transition: 0.3s;
+font-family: 'Noto Sans KR', sans-serif;
+  text-transform: uppercase
+}
+.SET .SET-SUB {
+  max-width: 400px;
+  font-size: 0.92rem;
+}
+.SET .SET-SUB .SET-SET {
+  font-size: 1.8rem;
+  font-weight: 400;
+  padding-top: 2rem;
+  color: #8c6239;
+  font-weight: 600;
+}
+  
+.SET .SET-SUB .SET-MORESET{
+  margin: 5px 0 10px 0;
+  color: #666;
+}
+
+.SET .SET-SUB a { 
+    background-color: #ccc;
+    color: #fff;
+    border-radius: 30px;
+    font-size: 0.84rem;
+    font-weight: 300;
+    padding: 1px 6px;
 }
