--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,7 @@ img {
   .btn {
     width: 130px;
     padding: 10px;
-    border: 2px soild #333;
+    border: 2px solid #333;
     border-radius: 4px;
     box-sizing: border-box;
     font-weight: 700;
@@ -323,7 +323,6 @@ header .badges .badge {
   /* 순차적으로 요소 보이기 - 투명한 상태에서 시작되도록 */
   opacity: 0;
 }
-
 /* NOTICE */
 .notice {
   position: relative;
@@ -346,14 +345,16 @@ header .badges .badge {
 }
 .notice .inner {
   height: 62px;
-  /* border: 4px solid red;  */
+  /* border: 4px solid red; */
   display: flex;
 }
 .notice .inner__left {
   /* 방법1. %를 사용하여 비율 나누기 */
   width: 70%;
-  background-color: #333;
+  /* 방법2. flex를 사용하여 비율 나누기 */
   /* flex: 7; */
+  background-color: #333;
+
   display: flex;
   align-items: center;
 }
@@ -363,10 +364,10 @@ header .badges .badge {
   font-weight: 700;
   margin-right: 20px;
 }
-.notice .inner__left .swiper{
+.notice .inner__left .swiper {
   /* background-color: orange; */
   height: 62px;
-  flex-grow: 1; /* 여기서는 flex:1; 써도 같은 결과*/
+  flex-grow: 1; /* 여기서는 flex: 1; 써도 같은 결과 */
 }
 .notice .inner__left .swiper .swiper-slide {
   display: flex;
@@ -377,23 +378,23 @@ header .badges .badge {
   color: #fff;
 }
 .notice .inner__left .notice-more {
-  width: 62PX;
+  width: 62px;
   height: 62px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.notice .inner__left .notice-more  .material-icons {
-  /* 머티리얼 아이콘은 글자 관련 속성이 적요오딤 */
+.notice .inner__left .notice-more .material-icons {
+  /* 머티리얼 아이콘은 글자 관련 속성이 적용됨 */
   color: #fff;
-
+  font-size: 30px;
 }
-
 .notice .inner__right {
   /* 방법1. %를 사용하여 비율 나누기 */
   width: 30%;
   /* 방법2. flex를 사용하여 비율 나누기 */
   /* flex: 3; */
+
   display: flex;
   justify-content: flex-end;
   align-items: center;
@@ -403,7 +404,7 @@ header .badges .badge {
   font-weight: 700;
 }
 .notice .inner__right .toggle-promotion {
-  width: 62PX;
+  width: 62px;
   height: 62px;
   display: flex;
   justify-content: center;
@@ -413,3 +414,184 @@ header .badges .badge {
 .notice .inner__right .toggle-promotion .material-icons {
   font-size: 30px;
 }
+
+/* PROMOTION */
+.promotion {
+  height: 663px;
+  background-color: #f6f5ef;
+  display: flex;
+  justify-content: center; /* 슬라이드를 수평 가운데 정렬 */
+  position: relative; /* 페이지 번호 요소 배치를 위해 */
+  overflow: hidden;
+  transition: height .4s;
+}
+.promotion.hide {
+  height: 0;
+  /* display 속성을 사용하면 애니메이션 효과 못넣음!!
+    (none -> block 될 때 중간 과정이 없기때문에)
+  */
+}
+.promotion .swiper {
+  /* 이미지 크기(819px) 3개 && 사이 여백(10px) 2개 = 2477px */
+  width: calc(819px * 3 + 10px * 2);
+  /* 사용 예시: calc(100% - 50px); */
+  height: 553px;
+  /* 2477px 유지를 위해 감소 너비 비율을 0으로 */
+  flex-shrink: 0;
+}
+.promotion .swiper-slide {
+  /* 모든 슬라이드는 반투명하게, active 한 것만 불투명하게 */
+  opacity: 0.5;
+  transition: opacity 1s;
+  position: relative;
+}
+.promotion .swiper-slide-active {
+  opacity: 1;
+}
+.promotion .swiper-slide .btn {
+  position: absolute;
+  bottom: 0;
+  /* absolute를 이용한 수평 가운데 배치 */
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+}
+.promotion .swiper-pagination {
+  position: absolute;
+  bottom: 40px;
+  z-index: 1;
+  /* (라이브러리에서 10이 적용됨) 헤더의 z-index가 9이기때문에 1로 덮어씌움 */
+}
+.promotion .swiper-pagination .swiper-pagination-bullet {
+  /* 기존 배경색은 투명하게 숨기고, 배경 이미지를 사용 */
+  background-color: transparent;
+  background-image: url("../images/promotion_slide_pager.png");
+  width: 13px;
+  height: 12px;
+}
+.promotion .swiper-pagination .swiper-pagination-bullet-active {
+  background-image: url("../images/promotion_slide_pager_on.png");
+}
+/* 쉼표로 구분해서 다중 선택으로 공통 스타일 지정 */
+.promotion .swiper-button-prev, 
+.promotion .swiper-button-next {
+  width: 42px;
+  height: 42px;
+  border: 2px solid #333;
+  border-radius: 50%;
+  position: absolute;
+  top: 300px;
+  z-index: 1;
+  color: #333;
+  transition: .4s;
+}
+.promotion .swiper-button-prev {
+  /* 가운데로 몰아넣고 마진으로 위치 조정 */
+  left: 50%;
+  margin-left: -480px;
+}
+.promotion .swiper-button-next {
+  /* 가운데로 몰아넣고 마진으로 위치 조정 */
+  right: 50%;
+  margin-right: -480px;
+}
+.promotion .swiper-button-prev:hover,
+.promotion .swiper-button-next:hover {
+  background-color: #333;
+  color: #fff;
+}
+.promotion .swiper-button-prev::after,
+.promotion .swiper-button-next::after {
+  display: none;
+}
+
+/* REWARDS */
+.rewards {
+  position: relative;
+}
+.rewards .bg-left {
+  width: 50%;
+  height: 100%;
+  background-color: #272727;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.rewards .bg-right {
+  width: 50%;
+  height: 100%;
+  background-color: #d5c798;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+.rewards .inner {
+  height: 241px;
+  background-image: url("../images/rewards.jpg");
+}
+.rewards .btn-group {
+  width: 250px;
+  display: flex;
+  flex-wrap: wrap;
+
+  position: absolute;
+  right: 0;
+  bottom: 24px;
+}
+.rewards .btn-group .btn.sign-up {
+  margin-right: 10px;
+}
+.rewards .btn-group .btn.sign-in {
+  width: 110px;
+}
+.rewards .btn-group .btn.gift {
+  margin-top: 10px;
+  flex-grow: 1; /* flex 컨테이너 내부에서 최대한의 너비를 쓸 수 있도록, flex: 1;을 써도 같은 결과 */
+}
+
+/* YOUTUBE */
+.youtube {
+  position: relative;
+  height: 700px;
+  background-color: #333;
+
+  /* 정가운데 배치 방법3 */
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
+
+  /* 영상 출력 넘치는 부분 숨기기 */
+  overflow: hidden;
+}
+.youtube .youtube__area {
+  /* 유튜브의 표준 영상 비율 16:9 */
+  width: 1920px;
+  height: 1080px;
+  /* background-color: orange; */
+
+  /* 정가운데 배치하는 기술들(3가지) */
+  position: absolute;
+
+  /* 방법1 */
+  /* 부모의 50% 위치에 배치 */
+  left: 50%;
+  top: 50%;
+  /* margin을 이용하여 정가운데로 옮기기 */
+  /* 가로 너비의 절반만큼 */
+  margin-left: calc(1920px / -2);
+  /* 세로 높이의 절반만큼 */
+  margin-top: calc(1080px / -2);
+
+  /* 방법2 */
+  /* top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto; */
+}
+#player {
+  width: 100%;
+  height: 100%;
+}
+
+
