--- a/css/main.css
+++ b/css/main.css
@@ -549,6 +549,7 @@ header .badges .badge {
   flex-grow: 1; /* flex 컨테이너 내부에서 최대한의 너비를 쓸 수 있도록, flex: 1;을 써도 같은 결과 */
 }
 
+
 /* YOUTUBE */
 .youtube {
   position: relative;
@@ -593,5 +594,227 @@ header .badges .badge {
   width: 100%;
   height: 100%;
 }
+/* position:fixed 는 뷰포트 기준 */
+.youtube .youtube__cover {
+  /* position: fixed; */
+  position: absolute;
+  /* z-index: 999; */
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
+  background-image: url("../images/video_cover_pattern.png");
+}
+.youtube .inner {
+  height: 100%;
+  /* background-color: royalblue; */
+}
+.youtube .floating1 {
+  position: absolute;
+  top: 50px;
+  left: 0;
+}
+.youtube .floating2 {
+  position: absolute;
+  top: 350px;
+  left: 150px;
+}
 
+/* SEASON PRODUCT */
+.season-product {
+  background-image: url("../images/season_product_bg.jpg");
+}
+.season-product .inner {
+  height: 400px;
+}
+.season-product .floating3 {
+  position: absolute;
+  top: -200px;
+  right: 0;
+}
+.season-product .text-group {
+  position: absolute;
+  top: 110px;
+  right: 110px;
+}
+.season-product .text-group .title {
+  margin-bottom: 10px;
+}
+.season-product .text-group .description {
+  margin-bottom: 15px;
+}
 
+/* RESERVE COFFEE */
+.reserve-coffee {
+  background-image: url("../images/reserve_bg.jpg");
+}
+.reserve-coffee .inner {
+  height: 400px;
+}
+.reserve-coffee .reserve-logo {
+  position: absolute;
+  top: 110px;
+  left: 0;
+}
+.reserve-coffee .text-group {
+  position: absolute;
+  top: 124px;
+  left: 208px;
+}
+.reserve-coffee .product {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+/* PICK YOUR FAVORITE */
+.pick-your-favorite {
+  background-image: url("../images/favorite_bg.jpg");
+
+  /* 배경 이미지에 시차 효과(parallax) 추가 */
+  background-attachment: fixed; /* 배경 이미지가 뷰포트에 고정 */
+  background-repeat: no-repeat; /* 반복되지않음 */
+  background-position: center; /* 위치를 중앙에 고정*/
+  background-size: cover; /* 원본을 유지한채로 더 큰 길이에 맞춰서 커짐*/
+}
+
+.pick-your-favorite .inner {
+  padding: 110px 0;
+  }
+.pick-your-favorite .text-group {
+    /* border: 10px solid red; */
+    width: 362px; /* 정렬 영역이 충분하면 줄바꿈 되지 않음, 너비를 제한해서 강제로 줄바꿈 */
+    flex-wrap: wrap;
+    display: flex;  
+    justify-content: flex-end;
+    margin-left: 100px;
+  }
+.pick-your-favorite .text-group .title {
+  margin-bottom: 40px;
+}
+.pick-your-favorite .text-group .description {
+  margin-bottom: 40px;
+}
+
+/* RESERVESTORE */
+.reserve-store {
+  background-image: url("../images/reserve_store_bg.jpg");
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+.reserve-store .inner {
+  height: 600px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.reserve-store .modal {
+  width: 334px;
+  height: 334px;
+  perspective: 600px; /* 회전하는 요소의 부모 요소에 원근 거리를 추가*/
+}
+.reserve-store .modal .front,
+.reserve-store .modal .back {
+  position: absolute;
+  backface-visibility: hidden; /* 회전된 요소의 뒷면을 숨김*/
+  transition: 1s;
+}
+.reserve-store .modal .front {
+  transform: rotateY(0deg); /* 안적어도 0도 명시적으로 작성(생략가능)*/
+}
+.reserve-store .modal:hover .front {
+  transform: rotateY(180deg); 
+}
+.reserve-store .modal .back {
+  transform: rotateY(-180deg);
+}
+.reserve-store .modal:hover .back {
+  transform: rotateY(0deg);
+}
+.reserve-store .modal .back .btn {
+  position: absolute;
+  top: 240px;
+  left: 0;
+  right: 0;
+  margin: auto;
+}
+
+/* FIND STORE */
+.find-store {
+  background-image: url("../images/find_store_bg.jpg");
+}
+.find-store .inner {
+  height: 400px;
+}
+.find-store .texture1 {
+  position: absolute;
+  top: 0;
+  left: 400px;
+}
+.find-store .texture2 {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+.find-store .picture1 {
+  position: absolute;
+  top: -60px;
+  left: 0;
+  border-radius: 50%;
+  box-shadow: 2px 2px 8px 0 rgba(0, 0, 0, .5);
+}
+  
+.find-store .picture2 {
+  position: absolute;
+  top: 150px;
+  left: 250px;
+  border-radius: 50%;
+  box-shadow: 2px 2px 8px 0 rgba(0, 0, 0, .5);
+}
+.find-store .text-group {
+  position: absolute;
+  top: 120px;
+  left: 550px;
+}
+.find-store .text-group .title{
+  margin-bottom: 20px;
+}   
+.find-store .text-group .description{
+  margin-bottom: 20px;
+}
+
+/* AWARDS */
+.awards {
+  background-color: #272727;
+}
+.awards .inner {
+  padding: 40px 0;
+}
+.awards .swiper-button-next,
+.awards .swiper-button-prev {
+  width: 42px;
+  height: 42px;
+  border: 2px solid #fff;
+  border-radius: 50%;
+  color: #fff;
+  opacity: .3;
+  position: absolute;
+}
+.awards .swiper-button-next {
+  left: -100px;
+}
+.awards .swiper-button-prev {
+  right: -100px;
+}
+.awards .swiper-button-next:hover,
+.awards .swiper-button-prev:hover {
+  background-color: #fff;
+  color: #333;
+}
+.awards .swiper-button-next::after,
+.awards .swiper-button-prev::after {
+  display: none;
+}
