--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,8 @@
+/* 스크롤 이동을 부드럽게 */
+html {
+  scroll-behavior: smooth;
+}
+
 /* COMMON */
 body {
   font-family: 'Nanum Gothic', sans-serif;
@@ -6,7 +11,6 @@ body {
   line-height: 1.4;
   color: #333;
   /* 위 속성들은 모두 상속되기에 전체 스타일을 한번에 제어 */
-
 
 }
 
@@ -21,26 +25,28 @@ img {
 
 .inner {
   /* 가로 너비를 가진 블록 요소에 margin: 0 auto; 를 줄 경우, 부모 범위 안에서 가운데 정렬 */
-  width: 1100px;
+  /* width: 1100px; */
   /* 반응형으로 작업하고 싶다면? */
-  /* max-width: 1100px; */
+  max-width: 1100px;
   margin: 0 auto;
   position: relative;
 }
-  /* 전역 버튼 스타일 */
-  /* 버튼과 같이 여러곳에서 반복사용되는 요소를 공통 스타일로 작업하면, 매번 다시 작성할 필요가 없음 */
-  .btn {
-    width: 130px;
-    padding: 10px;
-    border: 2px solid #333;
-    border-radius: 4px;
-    box-sizing: border-box;
-    font-weight: 700;
-    color: #333;
-    text-align: center;
-    cursor: pointer;
-    display: block; /* a, span 태그 같은 인라인 요소를 버튼으로 사용할 수도 있으니 미리 블록으로 지정 */
-    transition: .4s
+
+/* 전역 버튼 스타일 */
+/* 버튼과 같이 여러 곳에서 반복 사용되는 요소를 공통 스타일로 작업하면, 매번 다시 작성할 필요가 없음 */
+.btn {
+  width: 130px;
+  padding: 10px;
+  border: 2px solid #333;
+  border-radius: 4px;
+  box-sizing: border-box;
+  font-size: 16px;
+  font-weight: 700;
+  color: #333;
+  text-align: center;
+  cursor: pointer;
+  display: block; /* a, span 같은 인라인 요소를 버튼으로 사용할 수도 있으니 미리 블록으로 지정 */
+  transition: .4s;
 
   /* (참고) 커서 모양 커스텀 가능 */
   /* cursor: url("https://blog.kakaocdn.net/dn/BQXpN/btq3qNR67Lg/8tx8tGzkOcr5BuX5dyIaKk/img.png") 58 58, auto; */
@@ -67,7 +73,7 @@ img {
 }
 .btn.btn--gold {
   color: #d9aa8a;
-  border-color: #d9aa8a;  
+  border-color: #d9aa8a;
 }
 .btn.btn--gold:hover {
   color: #fff;
@@ -82,6 +88,32 @@ img {
   background-color: #fff;
 }
 
+/* BACK TO POSITIONS */
+.back-to-position {
+  opacity: 0;
+  transition: 1s;
+}
+.back-to-position.to-left {
+  /* 오른쪽에서 왼쪽으로 나타나는 */
+  transform: translateX(150px);
+}
+.back-to-position.to-right {
+  /* 왼쪽에서 오른쪽으로 나타나는 */
+  transform: translateX(-150px);
+}
+.show .back-to-position {
+  opacity: 1;
+  transform: translateX(0);
+}
+.show .back-to-position.delay-1 {
+  transition-delay: .3s;
+}
+.show .back-to-position.delay-2 {
+  transition-delay: .6s;
+}
+.show .back-to-position.delay-3 {
+  transition-delay: .9s;
+}
 
 /* HEADER */
 header {
@@ -89,9 +121,9 @@ header {
   background-color: #f6f5f0;
   border-bottom: 1px solid #c8c8c8;
 
-  /* 고전된 헤더 만들기 */
+  /* 고정된 헤더 만들기 */
   width: 100%;
-  position: fixed; /* 가로 너비를 지정하지 않으면 최소한으로 줄어드려고 함*/
+  position: fixed; /* 가로 너비를 지정하지 않으면 최소한으로 줄어드려고 함 */
   top: 0;
   z-index: 9;
 }
@@ -158,7 +190,7 @@ header .sub-menu .search input {
   padding: 4px 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
-     /* 박스 사이즈의 기준을 보더까지 잡음 */
+  box-sizing: border-box; /* 박스 사이즈의 기준을 보더까지 잡음 */
   outline: none; /* 보더 바깥쪽 테두리인데 잘 안씀(보더를 씀) */
   background-color: #fff;
   color: #777;
@@ -220,7 +252,7 @@ header .main-menu .item .item__contents .contents__menu {
 header .main-menu .item .item__contents .contents__menu > ul {
   display: flex;
   padding: 20px 0;
-} 
+}
 header .main-menu .item .item__contents .contents__menu > ul > li {
   /* 하위 메뉴 가로 너비를 통일 */
   width: 220px;
@@ -256,6 +288,8 @@ header .main-menu .item .item__contents .contents__texture p {
 }
 
 header .badges {
+  /* fixed 써도 상관없음 */
+  /* position: fixed; */
   position: absolute;
   top: 132px;
   right: 12px;
@@ -264,12 +298,10 @@ header .badges .badge {
   border-radius: 10px;
   overflow: hidden;
   margin-bottom: 12px;
-  /* x축거리 y축거리 흐림처리(blur) 범위, 확대/축소(spread) 범위, 색상 */
+  /* x축거리, y축거리, 흐림처리(blur) 범위, 확대/축소(spread) 범위, 색상  */
   box-shadow: 4px 4px 10px 0 rgba(0, 0, 0, .15);
   cursor: pointer;
-  
 }
-
 
 /* VISUAL */
 .visual {
@@ -286,7 +318,8 @@ header .badges .badge {
 .visual .title {
   position: absolute;
   top: 88px;
-  left: -10px;
+  /* left: -10px; */
+  left: 0;
 }
 .visual .title .btn {
   position: absolute;
@@ -296,7 +329,8 @@ header .badges .badge {
 .visual .cup1.image {
   position: absolute;
   bottom: 0;
-  right: -47px;
+  /* right: -47px; */
+  right: 0;
 }
 .visual .cup1.text {
   position: absolute;
@@ -318,11 +352,11 @@ header .badges .badge {
   bottom: 0;
   left: 275px;
 }
-
 .visual .fade-in {
   /* 순차적으로 요소 보이기 - 투명한 상태에서 시작되도록 */
   opacity: 0;
 }
+
 /* NOTICE */
 .notice {
   position: relative;
@@ -549,7 +583,6 @@ header .badges .badge {
   flex-grow: 1; /* flex 컨테이너 내부에서 최대한의 너비를 쓸 수 있도록, flex: 1;을 써도 같은 결과 */
 }
 
-
 /* YOUTUBE */
 .youtube {
   position: relative;
@@ -594,16 +627,13 @@ header .badges .badge {
   width: 100%;
   height: 100%;
 }
-/* position:fixed 는 뷰포트 기준 */
 .youtube .youtube__cover {
-  /* position: fixed; */
   position: absolute;
-  /* z-index: 999; */
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(0, 0, 0, .3);
   background-image: url("../images/video_cover_pattern.png");
 }
 .youtube .inner {
@@ -636,7 +666,7 @@ header .badges .badge {
 .season-product .text-group {
   position: absolute;
   top: 110px;
-  right: 110px;
+  right: 100px
 }
 .season-product .text-group .title {
   margin-bottom: 10px;
@@ -672,24 +702,23 @@ header .badges .badge {
 .pick-your-favorite {
   background-image: url("../images/favorite_bg.jpg");
 
-  /* 배경 이미지에 시차 효과(parallax) 추가 */
+  /* 배경 이미지에 시차 효과(Parallax) 주기 */
   background-attachment: fixed; /* 배경 이미지가 뷰포트에 고정 */
-  background-repeat: no-repeat; /* 반복되지않음 */
-  background-position: center; /* 위치를 중앙에 고정*/
-  background-size: cover; /* 원본을 유지한채로 더 큰 길이에 맞춰서 커짐*/
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
-
 .pick-your-favorite .inner {
   padding: 110px 0;
-  }
+}
 .pick-your-favorite .text-group {
-    /* border: 10px solid red; */
-    width: 362px; /* 정렬 영역이 충분하면 줄바꿈 되지 않음, 너비를 제한해서 강제로 줄바꿈 */
-    flex-wrap: wrap;
-    display: flex;  
-    justify-content: flex-end;
-    margin-left: 100px;
-  }
+  /* border: 10px solid red; */
+  width: 362px; /* 정렬 영역이 충분하면 줄바꿈 되지 않음, 너비를 제한해서 강제로 줄바꿈 */
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  margin-left: 100px;
+}
 .pick-your-favorite .text-group .title {
   margin-bottom: 40px;
 }
@@ -697,10 +726,12 @@ header .badges .badge {
   margin-bottom: 40px;
 }
 
-/* RESERVESTORE */
+/* RESERVE STORE */
 .reserve-store {
   background-image: url("../images/reserve_store_bg.jpg");
-  background-attachment: fixed;
+
+  /* 배경 이미지에 시차 효과(Parallax) 주기 */
+  background-attachment: fixed; /* 배경 이미지가 뷰포트에 고정 */
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -711,30 +742,30 @@ header .badges .badge {
   justify-content: center;
   align-items: center;
 }
-.reserve-store .modal {
+.reserve-store .medal {
   width: 334px;
   height: 334px;
-  perspective: 600px; /* 회전하는 요소의 부모 요소에 원근 거리를 추가*/
+  perspective: 600px; /* 회전하는 요소의 부모 요소에 원근 거리를 추가 */
 }
-.reserve-store .modal .front,
-.reserve-store .modal .back {
+.reserve-store .medal .front,
+.reserve-store .medal .back {
   position: absolute;
-  backface-visibility: hidden; /* 회전된 요소의 뒷면을 숨김*/
+  backface-visibility: hidden; /* 회전된 요소의 뒷면을 숨김 */
   transition: 1s;
 }
-.reserve-store .modal .front {
-  transform: rotateY(0deg); /* 안적어도 0도 명시적으로 작성(생략가능)*/
+.reserve-store .medal .front {
+  transform: rotateY(0deg); /* 명시적으로 작성(생략 가능) */
 }
-.reserve-store .modal:hover .front {
-  transform: rotateY(180deg); 
+.reserve-store .medal:hover .front {
+  transform: rotateY(180deg);
 }
-.reserve-store .modal .back {
+.reserve-store .medal .back {
   transform: rotateY(-180deg);
 }
-.reserve-store .modal:hover .back {
+.reserve-store .medal:hover .back {
   transform: rotateY(0deg);
 }
-.reserve-store .modal .back .btn {
+.reserve-store .medal .back .btn {
   position: absolute;
   top: 240px;
   left: 0;
@@ -766,7 +797,6 @@ header .badges .badge {
   border-radius: 50%;
   box-shadow: 2px 2px 8px 0 rgba(0, 0, 0, .5);
 }
-  
 .find-store .picture2 {
   position: absolute;
   top: 150px;
@@ -779,10 +809,10 @@ header .badges .badge {
   top: 120px;
   left: 550px;
 }
-.find-store .text-group .title{
+.find-store .text-group .title {
   margin-bottom: 20px;
-}   
-.find-store .text-group .description{
+}
+.find-store .text-group .description {
   margin-bottom: 20px;
 }
 
@@ -793,8 +823,8 @@ header .badges .badge {
 .awards .inner {
   padding: 40px 0;
 }
-.awards .swiper-button-next,
-.awards .swiper-button-prev {
+.awards .swiper-button-prev,
+.awards .swiper-button-next {
   width: 42px;
   height: 42px;
   border: 2px solid #fff;
@@ -803,18 +833,108 @@ header .badges .badge {
   opacity: .3;
   position: absolute;
 }
-.awards .swiper-button-next {
+.awards .swiper-button-prev {
   left: -100px;
 }
-.awards .swiper-button-prev {
+.awards .swiper-button-next {
   right: -100px;
 }
-.awards .swiper-button-next:hover,
-.awards .swiper-button-prev:hover {
+.awards .swiper-button-prev:hover,
+.awards .swiper-button-next:hover {
   background-color: #fff;
   color: #333;
 }
-.awards .swiper-button-next::after,
-.awards .swiper-button-prev::after {
+.awards .swiper-button-prev::after,
+.awards .swiper-button-next::after {
   display: none;
+}
+
+/* FOOTER */
+footer {
+  background-color: #272727;
+  border-top: 1px solid #333;
+}
+footer .inner {
+  padding: 40px 0 60px;
+}
+footer .menu {
+  display: flex;
+  justify-content: center;
+}
+footer .menu li {
+  position: relative;
+}
+footer .menu li::before {
+  content: "";
+  display: block;
+  width: 3px;
+  height: 3px;
+  background-color: #555;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+}
+footer .menu li:first-child::before {
+  display: none;
+}
+footer .menu li a {
+  color: #ccc;
+  font-size: 12px;
+  font-weight: 700;
+  padding: 15px; /* 클릭할 수 있는 범위를 늘려주기 위함 */
+  display: block; /* 위-아래 여백 적용을 위해 */
+}
+footer .menu li a.green {
+  color: #669900;
+}
+footer .btn-group {
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+}
+footer .btn-group .btn {
+  font-size: 12px;
+}
+footer .btn-group .btn + .btn {
+  margin-left: 10px;
+}
+footer .info {
+  margin-top: 30px;
+  text-align: center;
+}
+footer .info span {
+  color: #999;
+  font-size: 12px;
+}
+footer .info span + span {
+  margin-left: 20px;
+}
+footer .copyright {
+  color: #999;
+  font-size: 12px;
+  text-align: center;
+  margin-top: 12px;
+}
+footer .logo {
+  /* img 요소가 display: block; + margin: 0 auto; 인 경우, width 속성이 없이도 가운데 정렬이 가능함! */
+  margin: 30px auto 0;
+}
+
+/* SCROLL TO TOP */
+#to-top {
+  width: 42px;
+  height: 42px;
+  background-color: #333;
+  color: #fff;
+  border: 2px solid #fff;
+  border-radius: 10px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  z-index: 9;
 }
